Requires:
~~~~~~~~~
- CPSCore > 3.18.0
- CPSDocument > 0.29.0
- CPSSchema > 0.33.0
New features:
~~~~~~~~~~~~~
- enable i18n of folder/document using the translate action
  see doc/i18n-changes-from-CPSDefault-3_29_0.txt for more information
Bug fixes:
~~~~~~~~~~
- The navigation tree now is displayed as well at the root of the portal.
- Trying to add a box container failed in non-quiet mode if there was already
  one.
- CSS remove more IE peekaboo bugs
- Better wording for role acquisition blocking, do not use "Click here" wording.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- merging ben-i18n-branch
- basebox_menu is deprecated replace existing basebox_menu with treebox_menu
  which is i18n