@@ -14,6 +14,8 @@ Bug fixes:
   one.
 - CSS remove more IE peekaboo bugs
 - Better wording for role acquisition blocking, do not use "Click here" wording.
+- Setting the needed(!) missing 'Use external editor' for both sections and
+  workspaces, as well as missing WebDAV permissions for sections.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - merging ben-i18n-branch
